[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "robust_segment_anything"
version = "1.0.0"
description = "RobustSAM: Segment Anything Robustly on Degraded Images."
readme = { file = "README.md" , content-type = "text/markdown" }

license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "deep-learning",
    "pytorch",
    "vision",
    "object-segmentation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "numpy>=1.23.5",
  "torch>=2.0.0",
  "torchvision>=0.15.1"
]

[project.urls]
repository = "https://github.com/robustsam/RobustSAM"


[tool.setuptools.packages.find]
where = ["."]